Store async URL as field